--- a/NeoLuaSandbox/NeoLuaSandbox.fsproj
+++ b/NeoLuaSandbox/NeoLuaSandbox.fsproj
@@ -57,6 +57,9 @@
     <None Include="test1.lua">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Include="util.lua">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <Compile Include="AssemblyInfo.fs" />
     <Compile Include="Models.fs" />
     <Compile Include="Sandbox.fs" />
